# python-project-500

./: Makefile  README.md  Step_5  coverage.xml  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  gendiff.py  generate_diff.py  parse_file.py
gendiff/formatters/: format.py  format_diff.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tools/: argparse.py  parse_file.py
tests/: test_gendiff.py  test_generate_diff.py
tests/fixtures/: corr_answer_json.json
